Input field for job API key

--- a/app/src/app/file-upload/file-upload/file-upload.component.html
+++ b/app/src/app/file-upload/file-upload/file-upload.component.html
@@ -1,4 +1,10 @@
 <div class="form-group">
+    <div>
+        <mat-form-field class="example-full-width" appearance="fill">
+            <mat-label>Api Key</mat-label>
+            <input name="apiKey" matInput [(ngModel)]="apiKey" required>
+        </mat-form-field>
+    </div>
     <label for="file">Choose File</label>
     <input type="file" id="file" (change)="uploadFile($event.target.files)">
 </div>
