Implement list viewer of processing files

--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -1,6 +1,6 @@
 <mat-sidenav-container class="app-sidenav-container">
   <mat-sidenav #sidenav class="app-sidenav mat-elevation-z10" mode="over">
-    <p>floo-floo</p>
+    <app-job-list></app-job-list>
   </mat-sidenav>
   <mat-sidenav-content class="app-sidenav-content">
     <mat-toolbar color="primary">
