--- a/app/src/app/job-list/job-list.component.html
+++ b/app/src/app/job-list/job-list.component.html
@@ -1,1 +1,10 @@
-<p>test</p>
+<mat-list>
+    <mat-list-item *ngFor="let job of jobs | async">
+      <mat-icon matListIcon>folder</mat-icon><!-- TODO: Icon for status -->
+      <h3 matLine> {{job.id}} </h3>
+      <p matLine>
+        <span> {{job.status}} </span>
+        <span class="demo-2"> -- {{job.status}} </span>
+      </p>
+    </mat-list-item>
+  </mat-list>
